More minor css spacing fixes

--- a/src/Components/ProjectContainer.css
+++ b/src/Components/ProjectContainer.css
@@ -22,6 +22,8 @@
 #filterInput{
     height:2.5em;
     line-height:2.5em;
+    padding-top: 10px;
+    padding-bottom: 6px;
 }
 
 ::placeholder {
@@ -120,7 +122,7 @@ a i {
     border: 2px solid #feffff;
     margin:0px;
     margin-bottom:10px;
-    height:120px;
+    height:140px;
 }
 
 .itemBox:hover{
@@ -181,7 +183,7 @@ a i {
 .itemInfo{
     height: 100%;
     margin: 10px 10px;
-    padding: 0px 10px 0px 10px;
+    padding: 10px;
 }
 
 /* Text Fade Out */
@@ -204,5 +206,6 @@ a i {
 
 .bottomTags{
     text-align: right;
-    margin-right:10px;
+    margin-right: 10px;
+    margin-top: 5px;
 }
